--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 
 	<body>
 		<!-- navigation code here -->
-		<nav id="main-nav">
+		<div class="nav-container">
 			<h1>SpaceWalkers</h1>
-			<div class="navigation">
+			<nav id="main-nav" class="container">
 				<a href="#">Home</a>
 				<a href="#">About Us</a>
 				<a href="#">Blog</a>
 				<a href="#">Contact</a>
 				<a href="#">Sign In</a>
-			</div>
-		</nav>
+			</nav>
+		</div>
 		<div class="container home">
 			<header class="intro">
 				<!-- image code here -->
