Stretch goals 1-3 completed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<h1>SpaceWalkers</h1>
 			<nav id="main-nav" class="container">
 				<a href="#">Home</a>
-				<a href="#">About Us</a>
+				<a href="about.html">About Us</a>
 				<a href="#">Blog</a>
 				<a href="#">Contact</a>
 				<a href="#">Sign In</a>
@@ -32,7 +32,7 @@
 		<div class="container home">
 			<header class="intro">
 				<!-- image code here -->
-				<img src="img/main-header.png" class="sky" alt="Earth's Curve from Space" />
+				<img src="img/main-header.png" alt="Earth's Curve from Space" />
 				<h2>Lift Off</h2>
 
 				<p>
