--- a/about.html
+++ b/about.html
@@ -41,10 +41,28 @@
 					<h3>Remember the Wonder?</h3>
 
 					<p>
-						The Earth was small, light blue, and so touchingly alone, our home
-						that must be defended like a holy relic. The Earth was absolutely
-						round.
+						NASA’s Goddard Space Flight Center in Greenbelt, Maryland, released
+						its third issue of a new online news magazine for kids, teens and
+						educators called “NASA Next.”
 					</p>
+					<p>
+						The third issue, for winter 2017, is available for download. The
+						magazine seeks to engage kids and teens in NASA science, and serve
+						as a resource for educators. This issue’s theme is “Dreaming Big.”
+						At NASA, we dream big every day. Our ambitions take us to new
+						heights as we launch spacecraft and make extraordinary discoveries.
+					</p>
+					<p>
+						“I want to encourage readers that whether your dream is big or
+						small, keep striving for it,” said NASA Next editor Sarah Schlieder.
+						“Even the smallest of ambitions can have a big impact.”
+					</p>
+					<span class="credit">
+						<a
+							href="https://www.nasa.gov/feature/goddard/2017/nasa-releases-new-issue-of-nasa-next-online-news-magazine-for-kids-and-teens"
+							>&mdash; Content Source</a
+						>
+					</span>
 					<div class="btn">
 						Find Out More
 					</div>
